crates/pg_syntax/tests/snapshots/postgres_regress/name@36.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT parse_ident('1020');"
---
SelectStmt@0..27
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..25
    FuncCall@7..25
      Ident@7..18 "parse_ident"
      Ascii40@18..19 "("
      AConst@19..25
        Sconst@19..25 "'1020'"
  Ascii41@25..26 ")"
  Ascii59@26..27 ";"

