crates/pg_syntax/tests/snapshots/postgres_regress/name@38.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT parse_ident('.');"
---
SelectStmt@0..24
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..22
    FuncCall@7..22
      Ident@7..18 "parse_ident"
      Ascii40@18..19 "("
      AConst@19..22
        Sconst@19..22 "'.'"
  Ascii41@22..23 ")"
  Ascii59@23..24 ";"

