crates/pg_syntax/tests/snapshots/postgres_regress/name@39.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT parse_ident('.1020');"
---
SelectStmt@0..28
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..26
    FuncCall@7..26
      Ident@7..18 "parse_ident"
      Ascii40@18..19 "("
      AConst@19..26
        Sconst@19..26 "'.1020'"
  Ascii41@26..27 ")"
  Ascii59@27..28 ";"

