crates/pg_syntax/tests/snapshots/postgres_regress/name@40.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT parse_ident('xxx.1020');"
---
SelectStmt@0..31
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..29
    FuncCall@7..29
      Ident@7..18 "parse_ident"
      Ascii40@18..19 "("
      AConst@19..29
        Sconst@19..29 "'xxx.1020'"
  Ascii41@29..30 ")"
  Ascii59@30..31 ";"

