crates/pg_syntax/tests/snapshots/postgres_regress/name@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO NAME_TBL(f1) VALUES ('asdfghjkl;');"
---
InsertStmt@0..47
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "NAME_TBL"
  Ascii40@20..21 "("
  ResTarget@21..23
    Ident@21..23 "f1"
  Ascii41@23..24 ")"
  Whitespace@24..25 " "
  SelectStmt@25..45
    Values@25..31 "VALUES"
    Whitespace@31..32 " "
    Ascii40@32..33 "("
    List@33..45
      AConst@33..45
        Sconst@33..45 "'asdfghjkl;'"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

